# WorldCup-Predictor

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/worldcup/data/: loader.py  schema.py  team_codes.py
backend/src/worldcup/features/: elo.py  elo_pipeline.py  recent_form.py
