[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "lightgbm>=4.6.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.39.0",
    "xgboost>=2.1.4",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "ruff>=0.15.20",
]
