[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.8",
    "lightgbm>=4.6.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.39.0",
    "xgboost>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup"]
